# PythonDashboardDevelopment

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  VISION.md  dashboard.html  justfile  loq.toml  pyproject.toml
dev-docs/: build-pipeline.md  generative-ui-architecture.md  generative-ui.md  theming-architecture.md
docs/: custom-pipes-demo.js  docs.json  export.mdx  overview.mdx  playground.mdx  renderer.js  serve.mdx  vercel.json  welcome.mdx
docs/actions/: call-handler.mdx  call-tool.mdx  fetch.mdx  open-file-picker.mdx  open-link.mdx  request-display-mode.mdx  send-message.mdx  set-interval.mdx  show-toast.mdx  update-context.mdx  update-state.mdx
docs/components/: accordion.mdx  alert.mdx  area-chart.mdx  audio.mdx  badge.mdx  bar-chart.mdx  button-group.mdx  button.mdx  calendar.mdx  card.mdx  carousel.mdx  checkbox.mdx  choice-card.mdx  code.mdx  column.mdx  combobox.mdx  conditional.mdx  container.mdx  dashboard-grid.mdx  data-table.mdx  date-picker.mdx  define-use.mdx  dialog.mdx  div-span.mdx  dot.mdx  drop-zone.mdx  embed.mdx  field.mdx  foreach.mdx  form.mdx  grid.mdx  histogram.mdx  hover-card.mdx  icon.mdx  image.mdx  input.mdx  kbd.mdx  label.mdx  line-chart.mdx  loader.mdx  (+26 more)
docs/concepts/: actions.mdx  components.mdx  core-concepts.mdx  custom-handlers.mdx  expressions.mdx  generative-ui.mdx  state.mdx
docs/examples/: actions.mdx  conditional.mdx  cross-filter.mdx  deploy-pipeline.mdx  dynamic-list.mdx  expense-tracker.mdx  file-upload.mdx  reactive-binding.mdx  sales-dashboard.mdx  server-dashboard.mdx  the-button.mdx  threshold-meter.mdx  todo.mdx
docs/expressions/: context.mdx  operators.mdx  overview.mdx  pipes.mdx
docs/getting-started/: installation.mdx  quickstart.mdx
docs/protocol/: accordion-item.mdx  accordion.mdx  alert-description.mdx  alert-title.mdx  alert.mdx  append-state.mdx  area-chart.mdx  audio.mdx  badge.mdx  bar-chart.mdx  block-quote.mdx  (+118 more)
renderer/: .gitignore  README.md  components.json  gallery.html  generative.html  index.html  package-lock.json  package.json  playground.html  vite-plugins.ts  vite.config.bundled.ts  vite.config.cdn.ts  vite.config.generative.ts  vite.config.playground.ts  vite.config.renderer.ts  vite.config.ts
tests/: conftest.py  test_actions.py  test_app.py  test_auto_name.py  test_conditional.py  test_contract.py  test_define_use_state.py  test_executor_harness.py  test_form_model.py  test_generative.py  test_on_mount.py  test_renderer.py  test_responsive.py  test_rx.py  test_rx_expressions.py  test_sandbox.py  test_themes.py
tools/: README.md  build_showcase.py  compact_json.py  extract_examples.py  extract_preview_classes.py  generate_content.py  generate_playground_bundle.py  generate_protocol_pages.py  generate_protocol_ref.py  generate_schemas.py  html_renderer.py  input.css  package-lock.json  preview-classes.html  render_previews.py  scope_css.py
(+500 files in other folders)
